--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -19,11 +19,10 @@
 
 .Card-p{
     position: absolute;
-    padding: 2px;
     margin: 0;
-    top: 0;
     background-color: black;
     color: white;
+    border-radius: 0px 0px 10px 10px;
     visibility: hidden;
 }
 
