--- a/src/components/meal-viewer/Viewer.css
+++ b/src/components/meal-viewer/Viewer.css
@@ -4,3 +4,29 @@
     background-color: green;
     display: inline-block;
 }
+
+@media (min-width: 1281px) {
+    .Viewer-container{
+        width: 80%;
+    }
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .Viewer-container{
+        width: 80%;
+    }
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 700px) and (max-width: 1024px) {
+    .Viewer-container{
+        width: 75%;
+    }
+}
