--- a/src/components/shopingCart/ShopingCart.css
+++ b/src/components/shopingCart/ShopingCart.css
@@ -1,8 +1,36 @@
 .ShopingCart-container{
+    box-sizing: border-box;
+    padding: 3px;
     position: absolute;
     right: 0px;
     width: 30%;
     height: 100%;
     background-color: yellow;
     display: inline-block;
+}
+
+@media (min-width: 1281px) {
+    .ShopingCart-container{
+        width: 20%;
+    }
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .ShopingCart-container{
+        width: 20%;
+    }
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 700px) and (max-width: 1024px) {
+    .ShopingCart-container{
+        width: 25%;
+    }
 }
