--- a/src/components/shopingCalculator/shopingCalculator.css
+++ b/src/components/shopingCalculator/shopingCalculator.css
@@ -1,9 +1,11 @@
 .shopingCalculator-container{
-    top:30%;
-    left: 40%;
-    position: absolute;
-    width: 300px;
-    height: 450px;
+    top:50vh;
+    left: 50vw;
+    position: fixed;
+    width: 190px;
+    height: 290px;
+    margin-left: -95px;
+    margin-top: -145px;
     background-color: blue;
 }
 
@@ -14,29 +16,35 @@
 }
 
 .shopingCalculator-image{
-    width: 120px;
-    height: 120px;
+    width: 70px;
+    height: 70px;
 }
 
 .shopingCalculator-calculatorButtonsContainer{
-    
+    background-color: yellow;
+    padding: 4px;
 }
 
 input[type="text"]{
     box-sizing: border-box;
+    border-width: 2px;
+    border-color: black;
     width: 100%;
     height: 30px;
     font-size: 1em;
+    margin-bottom: 2px;
 }
 
 .shopingCalculator-buttonRow{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: red;
+    --background-color: red;
 }
 
 .shopingCalculator-buttonRow button{
+    font-size: 2em;
+    font-style: italic;
     width: 60px;
-    height: 60px;
+    height: 50px;
 }
