--- a/src/components/shopingCalculator/shopingCalculator.css
+++ b/src/components/shopingCalculator/shopingCalculator.css
@@ -7,6 +7,7 @@
     margin-left: -95px;
     margin-top: -145px;
     background-color: blue;
+    visibility: hidden;
 }
 
 .shopingCalculator-imgContainer{
