calculator component open and close in a rigth way

--- a/src/components/shopingCalculator/shopingCalculator.css
+++ b/src/components/shopingCalculator/shopingCalculator.css
@@ -11,6 +11,7 @@
 }
 
 .shopingCalculator-imgContainer{
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
