--- a/src/components/shopingCalculator/shopingCalculator.css
+++ b/src/components/shopingCalculator/shopingCalculator.css
@@ -7,7 +7,7 @@
     margin-left: -95px;
     margin-top: -145px;
     background-color: blue;
-    visibility: hidden;
+    display: none;
 }
 
 .shopingCalculator-imgContainer{
@@ -49,4 +49,12 @@ input[type="text"]{
     font-style: italic;
     width: 60px;
     height: 50px;
+}
+
+.shopingCalculator-exCloser{
+    cursor: pointer;
+    top:1px;
+    right: 1px;
+    position: absolute;
+    background-color: white;
 }
