--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -1,6 +1,7 @@
-.Alert-container{
+.Alert-succes{
     position: fixed;
     top: 9vh;
+    left: 50vw;
     background-color: #2e7d32;
     opacity: .0;
     width: 500px;
@@ -16,6 +17,29 @@
     border-color: #005005;
     border-width: 1px;
     transition: opacity 1s ease;
+    transform: translate(-250px);
+}
+
+.Alert-dander{
+    position: fixed;
+    top: 9vh;
+    left: 50vw;
+    background-color: #d32f2f;
+    opacity: .0;
+    width: 500px;
+    height: 50px;
+    padding: 3px;
+    color: white;
+    z-index: 50;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: double;
+    border-color: #9a0007;
+    border-width: 2px;
+    transition: opacity 1s ease;
+    transform: translate(-250px);
 }
 
 .Alert-important{
