--- a/src/components/shopingCart/ShopingCart.css
+++ b/src/components/shopingCart/ShopingCart.css
@@ -5,7 +5,7 @@
     right: 0px;
     width: 30%;
     height: 100%;
-    background-color: yellow;
+    background-color: #558b2f;
     display: inline-block;
 }
 
