--- a/src/components/shopingCart/shopingCartList/ShopItem/ShopItem.css
+++ b/src/components/shopingCart/shopingCartList/ShopItem/ShopItem.css
@@ -2,7 +2,7 @@
     color: white;
     margin: 1px 0px 1px 0px;
     height: 40px;
-    background-color: brown;
+    background-color: #33691e;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
