--- a/src/components/shopingCart/shopingCartList/shopingCartList.css
+++ b/src/components/shopingCart/shopingCartList/shopingCartList.css
@@ -1,6 +1,7 @@
 .shopingCartList-container{
     width: 100%;
-    background-color: rebeccapurple;
     padding: 1px;
     box-sizing: border-box;
+    background-color: brown;
+    max-height: 200px;
 }
