--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background-color: #282c34;
+  background-color: #689f38;
 }
 
 @keyframes App-logo-spin {
