--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,24 @@
 .Header-topnav{
     position: relative;
     width: 100%;
-    height: 8vh;
-    background-color: brown;
+    height: 10vh;
+    background-color: #33691e;
     margin-bottom: 25px;
+    display: flex;
+}
+
+.Header-logo{
+    margin-left: 4px;
+    width: 10vh;
+    height: 10vh;
+}
+
+.Header-brandName{
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 2em;
+    font-style: italic;
+    padding: 0;
+    margin: 0;
 }
