--- a/src/components/meal-viewer/Viewer.css
+++ b/src/components/meal-viewer/Viewer.css
@@ -1,7 +1,7 @@
 .Viewer-container{
     width: 70%;
     height: 100%;
-    background-color: green;
+    background-color: #33691e;
     display: inline-block;
 }
 
