--- a/src/components/shopingCart/ShopingCartForm/ShopingCartForm.css
+++ b/src/components/shopingCart/ShopingCartForm/ShopingCartForm.css
@@ -1,11 +1,10 @@
 .ShopingCartForm-form{
     width: 100%;
     position: relative;
-    background-color: blueviolet;
 }
 
 .ShopingCartForm-form input[type=text]{
-    height: 25px;
+    height: 40px;
     margin-bottom: 4px;
     border: none;
     width: 100%;
@@ -20,7 +19,7 @@
 
 .ShopingCartForm-form textarea{
     width: 100%;
-    height: 50px;
+    height: 70px;
     padding: 0;
     border: none;
     margin-bottom: 2px;
@@ -40,6 +39,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    color: white;
   }
   
   /* Hide the browser's default checkbox */
