--- a/src/components/shopingCart/ShopingCart.css
+++ b/src/components/shopingCart/ShopingCart.css
@@ -7,6 +7,22 @@
     height: 100%;
     background-color: #558b2f;
     display: inline-block;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 
 @media (min-width: 1281px) {
