--- a/src/components/shopingCart/totalPurchase/TotalPurchase.css
+++ b/src/components/shopingCart/totalPurchase/TotalPurchase.css
@@ -1,20 +1,19 @@
 .TotalPurchase-container{
-    position: absolute;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 50px;
-    bottom: 1px;
-    left: 0px;
+    margin-bottom: 3px;
+    background-color: #33691e;
+    border-radius: 10px 10px 10px 10px;
 }
 
 .TotalPurchase-counter{
-    width: 70%;
+    width: 100%;
     height: 100%;
-    background-color: #33691e;
     color: white;
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-radius: 10px 10px 0px 0px;
+    margin-left: 3px;
+    font-size: 1.5em;
 }
