--- a/src/components/meal-viewer/Viewer.css
+++ b/src/components/meal-viewer/Viewer.css
@@ -3,30 +3,22 @@
     height: 100%;
     background-color: #33691e;
     display: inline-block;
+    position: relative;
+    overflow-y: hidden;
 }
 
-@media (min-width: 1281px) {
-    .Viewer-container{
-        width: 70%;
-    }
+.Viewer-filterContainer{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: saddlebrown;
+    width: 100%;
+    position: absolute;
+    top: 0px;
 }
 
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
-@media (min-width: 1025px) and (max-width: 1280px) {
-    .Viewer-container{
-        width: 70%;
-    }
-}
-
-/* 
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
-@media (min-width: 700px) and (max-width: 1024px) {
-    .Viewer-container{
-        width: 75%;
-    }
+.Viewer-productsContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
