--- a/src/components/meal-viewer/Viewer.css
+++ b/src/components/meal-viewer/Viewer.css
@@ -1,20 +1,30 @@
+.Viewer-filterContainer{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: saddlebrown;
+    width: 100%;
+    height: 15%;
+    position: absolute;
+    top: 0px;
+}
+
 .Viewer-container{
     width: 70%;
     height: 100%;
     background-color: #33691e;
     display: inline-block;
     position: relative;
-    overflow-y: hidden;
 }
 
-.Viewer-filterContainer{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: saddlebrown;
-    width: 100%;
+.Viewer-subContainer{
     position: absolute;
-    top: 0px;
+    height: 85%;
+    width: 100%;
+    overflow-y: auto;
+    margin-top: 85px;
+    bottom: 0px;
 }
+
 
 .Viewer-productsContainer{
     width: 100%;
