--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -29,8 +29,10 @@
     text-decoration: none;
     font-weight: bolder;
     height: 70%;
+    width: 100px;
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 10px;
     padding: 3px;
     border-style: solid;
