--- a/src/components/Home/SalesWindow/meal-viewer/ViewerHeader/ViewerHeader.css
+++ b/src/components/Home/SalesWindow/meal-viewer/ViewerHeader/ViewerHeader.css
@@ -16,18 +16,25 @@
     border-radius: 2px;
 }
 
-.ViewerHeader-link{
+.ViewerHeader-span{
     height: 70%;
     width: 100px;
     min-width: 100px;
     margin: 0px 3px 0px 0px;
-    border-radius: 10px;
-    background-color: green;
     color: white;
     font-weight: bold;
     font-size: 1em;
-    text-decoration: none;
+    padding: 3px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+}
+
+.ViewerHeader-active{
+    background-color: green;
 }
