--- a/src/components/Home/SalesWindow/meal-viewer/Card/Card.css
+++ b/src/components/Home/SalesWindow/meal-viewer/Card/Card.css
@@ -1,9 +1,8 @@
 .Card-div{
     padding: 0;
-    width: 130px;
-    height: 100px;
-    border-style: solid;
-    border-color: #689f38;
+    width: 100%;
+    height: 40px;
+    background-color: green;
     text-align: center;
     margin: 2px;
     cursor: pointer;
