--- a/src/components/Home/SalesWindow/meal-viewer/Card/Card.css
+++ b/src/components/Home/SalesWindow/meal-viewer/Card/Card.css
@@ -7,7 +7,7 @@
     margin: 2px;
     cursor: pointer;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border-radius: 5px;
 }
@@ -15,4 +15,9 @@
 .Card-p{
     margin: 0;
     color: white;
+}
+
+.Card-deleteImg{
+    width: 35px;
+    height: 35px;
 }
