Menu component apperiance changed, it looks good.

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -5,8 +5,7 @@
 }
 
 .Menu-fixed-window{
-    height: calc(100vh - 64px);
-    overflow-y: scroll;
+    height: var(--layoutHeigth);
 }
 
 .Menu-buttons-container{
@@ -18,7 +17,21 @@
     margin-left: 5px;
 }
 
-.Menu-sticky-toolbar{
+.Menu-sticky-navigation-bar{
     position:sticky;
     top: 0px;
+    height: var(--navigationToolBarHeigth);
+}
+
+#subToolbar {
+    height: 50px;
+}
+
+#subToolbar .input-field{
+    margin: 0 0 0 0;
+}
+
+.Menu-table-container{
+    height: calc(100vh - (var(--mainToolBarHeigth) + var(--navigationToolBarHeigth) + var(--subToolbarHeigth)));
+    overflow-y: scroll;
 }
